--- a/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
@@ -48,7 +48,7 @@
 
 <div class="row">
   <div class="col-md-12 student-enquires">
-    <card cardTitle="Student Enquiries" isCollapse="false">
+    <card cardTitle="List of Students" isCollapse="true">
       <app-student-enquires></app-student-enquires>
     </card>
   </div>
