--- a/src/app/shared/components/student-enquires/student-enquires.component.html
+++ b/src/app/shared/components/student-enquires/student-enquires.component.html
@@ -71,7 +71,7 @@
                   paginate: { id: 'server', itemsPerPage: itemsPerPage, currentPage: currentPage, totalItems: totalItems };let idx = index">
                   <!-- paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber, totalItems: totalItems} -->
               <td>{{item.id}}</td>
-              <td>{{item?.student?.sequenceId}}</td>
+              <td>{{item?.sequenceId}}</td>
               <td>{{item.createdOn | date: 'dd/MM/yyyy'}}</td>
               <td>{{item?.student?.name}}</td>
               <td>{{item.status}}</td>
