--- a/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
@@ -49,15 +49,15 @@
 <div class="row">
   <div class="col-md-12 student-enquires">
     <card cardTitle="List of Students" isCollapse="true">
-      <app-student-enquires></app-student-enquires>
+      <app-student-datatable></app-student-datatable>
     </card>
   </div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <card cardTitle="List of Tutors" isCollapse="false">
       <app-tutor-datatable></app-tutor-datatable>
     </card>
   </div>
-</div>
+</div> -->
