--- a/src/app/shared/_styles.scss
+++ b/src/app/shared/_styles.scss
@@ -44,3 +44,8 @@ input[type="radio"]:checked + label span {
   background: #66ccff;
   background-clip: content-box;
 }
+
+
+.font-20 {
+  font-size: 20px;
+}
