--- a/src/app/pages/aboutus/components/aboutus/aboutus.component.html
+++ b/src/app/pages/aboutus/components/aboutus/aboutus.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between align-items-center">
       <button class="btn btn-primary mr-1" (click)="editAboutus()">Edit</button>
       <button class="btn btn-primary mr-1" (click)="clearAboutus()">Clear</button>
-      <span class="ml-2">
+      <span class="ml-2" *ngIf="lastUpdated">
         lastUpdated on : {{lastUpdated | date: 'dd/MM/yyyy'}}
       </span>
     </div>
