--- a/src/app/pages/why-us/components/whyus/whyus.component.html
+++ b/src/app/pages/why-us/components/whyus/whyus.component.html
@@ -3,8 +3,8 @@
     <div class="d-flex justify-content-between align-items-center">
       <button class="btn btn-primary mr-1" (click)="editWhyus()">Edit</button>
       <button class="btn btn-primary mr-1" (click)="clearWhyus()">Clear</button>
-      <span class="ml-2">
-        lastUpdated on : {{lastUpdated | date: 'dd/MM/yyyy'}}
+      <span class="ml-2" *ngIf="lastUpdated">
+        lastUpdated on : {{lastUpdated + 'Z' | date: 'd MMMM y, h:mm a'}}
       </span>
     </div>
     <div class="col-md-12">
